# src/swagger.json
@@ -83,6 +83,77 @@
                     }
                 }
             }
-        }
-    }
+        },
+		"/categories/import": {
+			"post": {
+				"tags": ["Category"],
+				"summary": "Upload a categories.",
+				"description": "Upload a new categories.",
+				"requestBody": {
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created."
+					},
+					"500": {
+						"description": "Category already exists."
+					}
+				}
+			}
+		},
+		"/specifications": {
+			"post": {
+				"tags": ["Specification"],
+				"summary": "Create a Specification.",
+				"description": "Create a new Specification.",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/definitions/Specification"
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Created."
+					},
+					"500": {
+						"description": "Specification already exists."
+					}
+				}
+			}
+		}
+    },
+	"definitions": {
+		"Specification": {
+			"type": "object",
+			"properties": {
+				"name": {
+					"type": "string"
+				},
+				"description": {
+					"type": "string"
+				}
+			},
+			"example": {
+				"name": "Specification name sample.",
+				"description": "Specification description sample."
+			}
+		}
+	}
 }
